src/objects/Conference_Room__c.object
<CustomObject>
    <fields>
        <fullName>Conference_Room_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Conference Room Location</label>
        <referenceTo>Office__c</referenceTo>
        <relationshipLabel>Conference Rooms</relationshipLabel>
        <relationshipName>Conference_Rooms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Has_Projector__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Projector</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Seats_Available__c</fullName>
        <label>Number of Seats Available</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Conference Room</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Conference Room Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Conference Rooms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>